minor changes to requirements

--- a/docs/latex_rapport/artifacts/kravliste.tex
+++ b/docs/latex_rapport/artifacts/kravliste.tex
@@ -53,7 +53,7 @@
 \item En spiller får 200kr, hver gang spiller kommer til, eller passerer 'Start'.
 \item En spiller kaster terning og flytter sin brik så mange felter frem (med uret), som øjnene viser.
 \item En spiller skal kunne få en ekstra tur, hvis spilleren kaster 2 ens.
-\item Hver spiller skal kunne købe en grund til prisen, som står på feltet, hver gang spilleren lander på en grund, som ikke ejes af nogen.
+\item Hver spiller skal kunne købe en grund til prisen, som står på feltet, hver gang spilleren lander på en grund, som ikke ejes af nogen, og spilleren har penge nok.
 \item Når en spiller lander på en grund, der ejes af en anden spiller, skal spilleren betale leje til ejeren af feltet.
 \item Når en spiller lander på 'Til Fængsel', rykkes der videre til 'Fængsel'. Spilleren modtager yderligere ikke 200kr, når 'Start' passeres.
 \item Hvis en spiller lander på feltet 'Fængsel', er spilleren på besøg og kan fortsætte uden straf.
@@ -65,7 +65,7 @@
 \item En spiller skal kunne bygge et hotel, når spilleren har fire huse på hver grund i samme farve. Spilleren skal aflevere disse fire huse til banken. Spilleren må kun bygge ét hotel på hver grund. Prisen for et hotel er den samme som for et hus.
 \item Lejesummen forøges betydeligt ved opførelse af hus og hotel.
 \item Ejer en spiller alle grundene i samme farvegruppe, får man dobbelt leje af de ubebyggede grunde
-\item Når en spiller går fallit, skal spilleren overdrage alt til banken.
+\item Når en spiller går fallit, uden at skylde andre spillere, skal spilleren overdrage alt til banken.
 \reqend
 \subparagraph{Should have}
 \reqstart
