added TC1 to rapport

--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -91,7 +91,7 @@
 \import{sections/}{kodeprocessen}
 
 \subsection{Test-cases}
-%\import{test_cases/}{TC1_getNewPositionTest}
+\import{test_cases/}{TC1_setNumberOfSiblingTest}
 
 
 
