added TC1 to rapport

--- a/docs/latex_rapport/test_cases/TC1_setNumberOfSiblingTest.tex
+++ b/docs/latex_rapport/test_cases/TC1_setNumberOfSiblingTest.tex
@@ -39,8 +39,7 @@
                                                \item Kontrolleres om et grundfelt har korrekt nummer af søstrefelter en ad gangen
                                                \item Sættes test bollean til at være falsk, hvis der er et felt, som ikke har et søstrefelt.
             \end{tabenum} \\ \hline
-            \textbf{Test data}           &  Ikke defineret
-            \end{compactitem}  \\ \hline
+            \textbf{Test data}           &  Ikke defineret  \\ \hline
             \textbf{Forventet} & \savespace \begin{compactitem}
                                      \item Test boolean bliver ikke ændret til falsk undervejs af udførselen af løkken.
                                      \end{compactitem} \savespace \\    \hline
