changes in udførsel TC1

--- a/docs/latex_rapport/test_cases/TC1_setNumberOfSiblingTest.tex
+++ b/docs/latex_rapport/test_cases/TC1_setNumberOfSiblingTest.tex
@@ -34,10 +34,10 @@
             \textbf{Relateret Use cases}     & UC8: Byg hus, UC9: Byg hotel      \\ \hline
             \textbf{Forudsætning}& GameBoard er oprettet.\\ \hline
             \textbf{Udførsel}            & \begin{tabenum}
-                                               \item Oprettes test boolean, som sættes til true
-                                               \item Fås alle felterne fra GameBoard
+                                               \item Oprettes test boolean, som sættes til at være sandt
+                                               \item Fås alle felter fra GameBoard
                                                \item Kontrolleres om et grundfelt har korrekt nummer af søstrefelter en ad gangen
-                                               \item Sættes test bollean til at være falsk, hvis der er et felt, som ikke har et søstrefelt.
+                                               \item Sættes test bollean til at være falsk, hvis der er et felt, som ikke har et rigtigt nummer af søstrefelter.
             \end{tabenum} \\ \hline
             \textbf{Test data}           &  Ikke defineret  \\ \hline
             \textbf{Forventet} & \savespace \begin{compactitem}
