--- a/docs/latex_rapport/test_cases/TC1_setNumberOfSiblingTest.tex
+++ b/docs/latex_rapport/test_cases/TC1_setNumberOfSiblingTest.tex
@@ -30,22 +30,18 @@
             \hline
             \textbf{Test Case ID }       & \textbf{[TC1]: setNumberOfSiblings()}   \\ \hline
             \textbf{Opsummering}         & Formålet med testen er at kontrollere om alle grunde har et korrekt nummer af søstrefelter.
-                                            Altså tages der ikke højde for om det har korrekte søstrefelter. \\ \hline
-            \textbf{Relateret Use cases}     & UC8: Byg hus, UC9: Byg hotel      \\ \hline
-            \textbf{Forudsætning}& GameBoard er oprettet.\\ \hline
+                                            Der tages til gengæld ikke højde for om felterne har de rigtigt søstrefelter i denne test. \\ \hline
+            \textbf{Relateret Use cases}     & UC8: Byg hus \\ \hline
+            \textbf{Forudsætning}& GameBoard er oprettet med felterne og deres søstrefelter.\\ \hline
             \textbf{Udførsel}            & \begin{tabenum}
                                                \item Oprettes test boolean, som sættes til at være sandt
                                                \item Fås alle felter fra GameBoard
                                                \item Kontrolleres om et grundfelt har korrekt nummer af søstrefelter en ad gangen
-                                               \item Sættes test bollean til at være falsk, hvis der er et felt, som ikke har et rigtigt nummer af søstrefelter.
+                                               \item Sættes test boolean til at være falsk, hvis der er et felt, som ikke har et rigtigt nummer af søstrefelter.
             \end{tabenum} \\ \hline
-            \textbf{Test data}           &  Ikke defineret  \\ \hline
-            \textbf{Forventet} & \savespace \begin{compactitem}
-                                     \item Test boolean bliver ikke ændret til falsk undervejs af udførselen af løkken.
-                                     \end{compactitem} \savespace \\    \hline
-            \textbf{Aktuel} & \begin{tabenum}
-                                  \item Test boolean forbliver sandt.
-            \end{tabenum}   \\ \hline
+            \textbf{Test data}           &  Felterne  fra GameBoard\\ \hline
+            \textbf{Forventet} & Test boolean bliver ikke ændret til falsk undervejs af udførselen af løkken.\\    \hline
+            \textbf{Aktuel} &  Test boolean forbliver sandt.\\ \hline
             \textbf{Status} & \textbf{Pass} \\ \hline
             \textbf{Lavet af} & Gruppe 44\\ \hline
             \textbf{Dato} & 17/01/2019 \\ \hline
