added acceptance testing

--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -90,10 +90,11 @@
 \subsection{Kodeprocessen}
 \import{sections/}{kodeprocessen}
 
-\subsection{Test-cases}
+\section{Testing}
+\subsection{JUnit testing}
 \import{test_cases/}{TC1_setNumberOfSiblingTest}
-
-
+\subsection{Acceptance testing}
+\import{test_cases/}{acceptence_test}
 
 \section{Konklution}
 \import{sections/}{konklusion}
