Added few more acceptence tests

--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -91,8 +91,10 @@
 \import{sections/}{kodeprocessen}
 
 \section{Testing}
-\subsection{JUnit testing}
+\subsection{Unit testing}
 \import{test_cases/}{TC1_setNumberOfSiblingTest}
+\subsection{Itegration testing}
+
 \subsection{Acceptance testing}
 \import{test_cases/}{acceptence_test}
 
