Added few more acceptence tests

--- a/docs/latex_rapport/test_cases/acceptence_test.tex
+++ b/docs/latex_rapport/test_cases/acceptence_test.tex
@@ -127,6 +127,7 @@
             Grundenes rammefarve opdateres til den nye ejers farve på spillepladen & -\\ \hline
             Lejeprisen på felter updates, hvis de overførte grunde fra en spiller, der er gået fallit gør at alle felter i en gruppe ejes (opdateres også på spillepladen) & -\\ \hline
             Hvis alle undtagen en spiller er gået fallit, udnævnes en vinder& -\\ \hline
+            En spiller må ikke længere interegere længere med spillet, efter spilleren er gået fallit. Inklusive at administrere ejendomme.& - \\ \hline
         \end{tabularx}
     \end{table}
 
