changed kreditor to en kreditor

--- a/docs/latex_rapport/artifacts/ordbog.tex
+++ b/docs/latex_rapport/artifacts/ordbog.tex
@@ -34,7 +34,7 @@
                                              lykkekortet 'Til fængsel' \\
             \textbf{'på besøge' i fængsel}   & Når spiller er landet på feltet 'Fængsel'\\
 
-            \textbf{kreditor}   & Ejeren af feltet, som man er landet på (kan enten være en spiller eller banken).\\
+            \textbf{En kreditor}   & Ejeren af feltet, som man er landet på (kan enten være en spiller eller banken).\\
 
         \end{tabularx}
     \end{table}
