rettelse i interessent analyse

--- a/docs/latex_rapport/artifacts/interessent_analyse.tex
+++ b/docs/latex_rapport/artifacts/interessent_analyse.tex
@@ -33,7 +33,21 @@
 
             \rowcolor[gray]{.8}
             \textbf{Interessent}& \textbf{Mål}   \\ \hline
-            \textbf{IOOuterActive}       & At modtage et velfungerende spil med lave omkostninger og ikke mindst til tiden.\\
+            \textbf{IOOuterActive}       & At modtage et velfungerende spil med lave omkostninger og ikke mindst til tiden.
+                                            Velskrevet og egneder sig til videreudvikling.  \\
+
+
+        \end{tabularx}
+
+
+    \end{table}
+
+    \begin{table}[H]
+        \caption{Aktør-mål\cite{del3}}\label{tab:aktoer}
+        \begin{tabularx}{\textwidth}{lX}
+
+            \rowcolor[gray]{.8}
+            \textbf{Aktør}& \textbf{Mål}   \\ \hline
             \textbf{Spiller}      & At spille et underholdende spil\\ \hline
 
 
