added Visitor pattern to rapport

--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -89,7 +89,8 @@
 \section{Implementering}
 \subsection{Kodeprocessen}
 \import{sections/}{kodeprocessen}
-
+\subsection{Visitor pattern}
+\import{sections/}{visitor_pattern}
 \section{Testing}
 \subsection{Unit testing}
 \import{test_cases/}{TC1_setNumberOfSiblingTest}
