added Visitor pattern to rapport

--- a/docs/latex_rapport/artifacts/ordbog.tex
+++ b/docs/latex_rapport/artifacts/ordbog.tex
@@ -35,7 +35,7 @@
             \textbf{'på besøge' i fængsel}   & Når spiller er landet på feltet 'Fængsel'\\
 
             \textbf{En kreditor}   & Ejeren af feltet, som man er landet på (kan enten være en spiller eller banken).\\
-
+            \textbf{GoF}   & Gang of Four designprincipper\\
         \end{tabularx}
     \end{table}
 
