--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -94,6 +94,7 @@
 \section{Testing}
 \subsection{Unit testing}
 \import{test_cases/}{TC1_setNumberOfSiblingTest}
+\import{test_cases/}{TC2_setCorrectSiblingsTest}
 \subsection{Itegration testing}
 
 \subsection{Acceptance testing}
