--- a/docs/latex_rapport/test_cases/TC2_setCorrectSiblingsTest.tex
+++ b/docs/latex_rapport/test_cases/TC2_setCorrectSiblingsTest.tex
@@ -34,7 +34,7 @@
             \textbf{Forudsætning}& GameBoard er oprettet med felterne og deres søstrefelter.\\ \hline
             \textbf{Udførsel}            & \begin{tabenum}
                                                \item Udvægles feltet "bernstoffsvej", som vil bruges til stikprøven.
-                                               \item Udvælges "hellerupvej" og "strandvejen" felterne, som der regnes med at være feltets "bernstoffsvej" søstrefelter.
+                                               \item Udvælges "hellerupvej" og "strandvejen" felterne, som regnes med at være feltets "bernstoffsvej" søstrefelter.
                                                \item Kontrolleres om "strandvejen" og "hellerup" er feltets "hellerupvej" søstrefelter.
             \end{tabenum} \\ \hline
             \textbf{Test data}           &  Ejendoms-felter: "brenstoffsvej", "strandvejen", "hellerup" \\ \hline
