use case diagram artifact is updated

--- a/docs/latex_rapport/artifacts/use_case_diagram.tex
+++ b/docs/latex_rapport/artifacts/use_case_diagram.tex
@@ -7,7 +7,6 @@
 \usepackage{graphicx,wrapfig,lipsum}
 
 \begin{document}
-    På figur~\ref{fig:use_case_model}.
 
     \begin{figure}[H]
         \centering
@@ -15,5 +14,7 @@
         \includegraphics[scale=0.7]{diagrams/use_case_diagram.pdf}
         \caption{Use case diagram over systemet}\label{fig:use_case_model}
     \end{figure}
+
+    Ovenstående use-case diagram på Figur~\ref{fig:use_case_model} viser de forskellige use cases relationer til spilleren, samt deres indbyrdes sammenhæng. Det kan ses, at det blev besluttet at opdele, hvad der kunne have været en use case (som nok ville kaldes, “Spil spillet”) op i flere use cases, for bedre overblik over programmets forskellige elementer.
 
 \end{document}
