pakkediagram is updated

--- a/docs/latex_rapport/artifacts/pakkediagram.tex
+++ b/docs/latex_rapport/artifacts/pakkediagram.tex
@@ -7,11 +7,11 @@
 \usepackage{graphicx,wrapfig,lipsum}
 
 \begin{document}
-    På figur~\ref{fig:pakkediagram}.
+    På Pakkediagrammet, Figur~\ref{fig:pakkediagram}, kan det tydeligt ses at vores overordnede opdeling i projektstrukturen er lavet ud fra Model-View-Controller design mønstret. Dette har vi valgt at gøre for nemmere at kunne adskille data (model-laget), logikken (controller-laget) og spillebrættet (View-laget). Denne opdeling er almindeligt anerkendt og findes overskuelig, så det egner sig til vedligeholdelse og videreudvikling af programmet.
 
     \begin{figure}[H]
 
-        \hbox{\hspace{-2cm} \includegraphics[scale=0.7]{diagrams/pakke_diagram.pdf}}
+         \includegraphics[scale=0.7]{diagrams/pakke_diagram.pdf}
 
         \caption{Pakkediagrammet over systemet}\label{fig:pakkediagram}
     \end{figure}
