--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -91,6 +91,7 @@
 \import{sections/}{kodeprocessen}
 \subsection{Visitor pattern}
 \import{sections/}{visitor_pattern}
+\newpage
 \section{Testing}
 \subsection{Unit testing}
 \import{test_cases/}{TC1_setNumberOfSiblingTest}
