--- a/docs/latex_rapport/artifacts/interessent_analyse.tex
+++ b/docs/latex_rapport/artifacts/interessent_analyse.tex
@@ -25,7 +25,6 @@
 % Document
 \begin{document}
 
-    Her beskrivelse af tabel~\ref{tab:interessent}
 
     \begin{table}[H]
         \caption{Interessent-mål\cite{del3}}\label{tab:interessent}
@@ -33,8 +32,15 @@
 
             \rowcolor[gray]{.8}
             \textbf{Interessent}& \textbf{Mål}   \\ \hline
-            \textbf{IOOuterActive}       & At modtage et velfungerende spil med lave omkostninger og ikke mindst til tiden.
-                                            Velskrevet og egneder sig til videreudvikling.  \\
+            \textbf{IOOuterActive}       &
+
+
+            \savespace \begin{compactitem}
+                           \item At modtage et velfungerende spil med lave omkostninger, og ikke mindst til tiden.
+                           \item Velskrevet og egneder sig til videreudvikling.
+            \end{compactitem}
+
+            \\ \hline
 
 
         \end{tabularx}
