--- a/docs/latex_rapport/artifacts/use_case_diagram.tex
+++ b/docs/latex_rapport/artifacts/use_case_diagram.tex
@@ -7,7 +7,7 @@
 \usepackage{graphicx,wrapfig,lipsum}
 
 \begin{document}
-
+    Nedenstående Figur~\ref{fig:use_case_model}  er et use-case diagram, der præsenterer de forskellige use cases og deres relationer til spilleren, samt deres indbyrdes sammenhæng. Det blev besluttet at opdele, hvad der kunne have været én stor use case (som nok ville kaldes, “Spil spillet”) op i flere use cases, for bedre overblik over programmets forskellige elementer.
     \begin{figure}[H]
         \centering
 
@@ -15,6 +15,6 @@
         \caption{Use case diagram over systemet}\label{fig:use_case_model}
     \end{figure}
 
-    Ovenstående use-case diagram på Figur~\ref{fig:use_case_model} viser de forskellige use cases relationer til spilleren, samt deres indbyrdes sammenhæng. Det kan ses, at det blev besluttet at opdele, hvad der kunne have været en use case (som nok ville kaldes, “Spil spillet”) op i flere use cases, for bedre overblik over programmets forskellige elementer.
+    I næste afsnit er de enkelte use cases mere mere detaljeret beskrevet for sig selv, i use case beskrivelser.
 
 \end{document}
