--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -52,7 +52,7 @@
 \import{artifacts/}{interessent_analyse}
 \subsection{Kravspecifikation}
 \import{artifacts/}{kravliste}
-
+\newpage
 \subsection{Use case diagram}
 \import{artifacts/}{use_case_diagram}
 \newpage
