--- a/docs/latex_rapport/main.tex
+++ b/docs/latex_rapport/main.tex
@@ -31,6 +31,9 @@
 \includepdf[page={1}]{sections/front_page}
 \thispagestyle{empty}
 \newpage
+\includepdf[page={1}]{sections/arbejdstimer}
+\thispagestyle{empty}
+\newpage
 \section*{Abstract}
 \import{sections/}{abstract}
 \thispagestyle{empty}
